# QuickerArkBot

./: .fix-style.sh  .gitmodules  README.md  meson.build
.github/workflows/: make.yml
source/: ArkBotInstanceBase.hpp  controller.hpp  inputParser.hpp  meson.build  playbackInstance.hpp  player.cpp  tester.cpp
source/base/: ArkBotInstance.hpp  meson.build
source/new/: ArkBotInstance.hpp  meson.build
source/new/core/: README.md
source/new/core/source/: GameConsts.h  GameData.cpp  GameData.h  GameOperations.cpp  GameOperations.h  GameState.h  Utilities.h
tests/: Core  lvl01.arkanoid.test  lvl01.initial.sol  lvl01.joypad.sol  lvl01.joypad.test  lvl01.sol  lvl01.state  lvl01.test  lvl02.joypad.initial.sol  lvl02.joypad.test  lvl02.sol  lvl02.test  lvl03.sol  lvl03.test  meson.build
