# baseArkBot Core sources

baseArkBotSrc =  [
  'core/source/GameData.cpp',
  'core/source/GameOperations.cpp',
]

baseArkBotIncludeDirs = [
 '.',
 'core/source/',
]

baseArkBotCompileArgs = [
]

# baseArkBot Core Configuration

 baseArkBotDependency = declare_dependency(
  compile_args        : [  baseArkBotCompileArgs ],
  include_directories : include_directories(baseArkBotIncludeDirs),
  sources             : [ baseArkBotSrc ],
  dependencies        : [  
                        ]
 )